@@ -1,3 +1,9 @@
+2009-12-23  Frank Lanitz  <frank@frank.uvena.de>
+
+ * Do only special character replacement in case of we really have 
+   an LaTeX file here.
+
+
 2009-12-13  Frank Lanitz  <frank@frank.uvena.de>
 
  * Show geanyLaTeX inside plugin manager.
